# fintech-ai

./: .gitignore  Makefile  README.md  docker-compose.yml
ai-service/: Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: dependencies.py  routes.py
ai-service/app/core/: config.py
ai-service/app/schemas/: chat.py  report.py
ai-service/app/services/: chat_service.py  llm_client.py  report_generator.py
ai-service/tests/: conftest.py  test_chat.py  test_report.py
backend-go/: Dockerfile  go.mod  go.sum
backend-go/cmd/api/: main.go
backend-go/internal/application/analysis/: service.go  service_integration_test.go  service_test.go
backend-go/internal/application/dashboard/: service.go  service_test.go
backend-go/internal/application/portfolio/: service.go  service_test.go  valuation_service.go
backend-go/internal/application/snapshot/: service.go  service_test.go
backend-go/internal/application/uow/: uow.go
backend-go/internal/domain/analysis/: insights.go  insights_test.go  report.go  repository.go
backend-go/internal/domain/portfolio/: concentration.go  money.go  portfolio.go  position.go  repository.go  valuation.go  valuation_test.go
backend-go/internal/domain/snapshot/: repository.go  snapshot.go
backend-go/internal/infrastructure/fx/: fallback.go  http.go  http_test.go  stub.go
backend-go/internal/infrastructure/market/: catalog.go  fallback.go  http.go  http_test.go  stub.go
backend-go/internal/infrastructure/persistence/: analysis_inmemory.go  portfolio_inmemory.go  snapshot_inmemory.go
backend-go/internal/infrastructure/uow/: inmemory.go  (+1 more)
backend-go/migrations/: 001_init.sql
cpp-engine/: CMakeLists.txt  Dockerfile
cpp-engine/include/engine/: engine.h  engine_c_api.h
cpp-engine/proto/: engine.proto
cpp-engine/src/: allocation_optimizer.cpp  main.cpp  portfolio_simulator.cpp  risk_calculator.cpp
cpp-engine/tests/: CMakeLists.txt  risk_test.cpp
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/__tests__/: store.test.ts
frontend/src/components/: AddPositionForm.tsx  CreatePortfolioForm.tsx  InsightsPanel.tsx  PortfolioCard.tsx  PositionsTable.tsx  ReportPanel.tsx  SnapshotsChart.tsx  ValuationPanel.tsx
frontend/src/domain/: models.ts
frontend/src/pages/: DashboardPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: portfolioStore.ts
frontend/src/types/: domain.ts
proto/: engine.proto
scripts/: dev.sh
(+16 files in other folders)
