[project]
name = "cbpi-ai-service"
version = "0.0.1"
description = "AI-powered Q&A and analysis for the Cross-Border Portfolio Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "anthropic>=0.40",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: hits real external services; requires ANTHROPIC_API_KEY",
]
